# ClaudeClaw-assistant

./: .gitignore  ARCHITECTURE.md  GUIDE.md  Mac Install.command  README.md  Windows Install.bat  assistant.ps1  assistant.sh  install.ps1  install.sh  pyproject.toml
app/: __init__.py  agent_config.py  agent_manager.py  agent_provisioning.py  app_paths.py  approvals.py  assistant_cli.py  auto_memory.py  backup.py  briefing.py  cache.py  chat_session.py  claude_runner.py  commands.py  compaction.py  computer_use.py  config.py  config_manager.py  context_builder.py  daemon_service.py  doctor.py  embeddings.py  hooks.py  instance_lock.py  job_runner.py  job_store.py  logging_utils.py  main.py  manage.py  mask_utils.py  mcp_server.py  memory.py  model_runner.py  monitors.py  observations.py  pairing.py  pdf_utils.py  router.py  runtime_state.py  scheduler.py  (+8 more)
config/: config.example.json
docs/: cheatsheet.html  cheatsheet.md  claudeclaw-architecture.md  handoff-2026-04-05.md  handoff-2026-04-07-windows.md  handoff-2026-04-07.md  handoff-2026-04-08.md  handoff-2026-04-09.md  handoff-2026-04-10.md  handoff-2026-04-12.md  handoff-2026-04-13.md  mac-validation-checklist.md  roadmap.md  what-is-claudeclaw.md
hooks/: example_hook.py.disabled
scripts/: assistant.ps1  assistant.sh  check_upstream.py  gap_check.command  manage.ps1  manage.sh  run.ps1  run.sh  start.ps1  start.sh  status.ps1  status.sh  stop.ps1  stop.sh  test.ps1  test.sh
tests/: conftest.py  test_agent_config.py  test_agent_manager.py  test_agent_provisioning.py  test_app_paths.py  test_assistant_cli_helpers.py  test_auto_memory.py  test_backup.py  test_callback_nonblocking.py  test_cc_importer.py  test_chat_session.py  test_cli_runtime.py  test_cli_watchdog.py  test_commands.py  test_compaction.py  test_computer_use.py  test_config.py  test_config_manager.py  (+29 more)
(+43 files in other folders)
