[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-runtime"
version = "0.2.0"
description = "Standalone personal assistant runtime powered by Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi",
    "pymupdf",
]

[project.optional-dependencies]
discord       = ["discord.py>=2.0"]
slack         = ["slack-sdk>=3.0"]
semantic      = ["fastembed>=0.4", "numpy>=1.26"]
computer-use  = ["pyautogui>=0.9", "Pillow>=10.0"]
voice         = ["openai-whisper>=20230918"]
all           = ["discord.py>=2.0", "slack-sdk>=3.0", "fastembed>=0.4", "numpy>=1.26", "pyautogui>=0.9", "Pillow>=10.0", "openai-whisper>=20230918"]

[project.scripts]
assistant = "app.assistant_cli:main"
assistant-manage = "app.manage:main"
assistant-runtime = "app.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["app*"]
